--- a/src/StaticWebApp/main.css
+++ b/src/StaticWebApp/main.css
@@ -1,3 +1,23 @@
-html {
-  height: 100%;
+.webchat__suggested-actions__item-box > button {
+  background-color: #1890ff !important;
+  color: white !important;
+  border-radius: 5px !important;
+}
+.webchat__suggested-actions__item-box > button:hover {
+  color: white !important;
+  background-color: #75b9f8 !important;
+  border-radius: 5px !important;
+}
+
+.ac-actionSet > button {
+  background-color: #1890ff !important;
+  border-radius: 5px !important;
+}
+.ac-actionSet > button:hover {
+  background-color: #75b9f8 !important;
+  border-radius: 5px !important;
+}
+.ac-actionSet > button:focus {
+  background-color: #096dd9 !important;
+  border-radius: 5px !important;
 }
